--- a/scss/_portfolio04.scss
+++ b/scss/_portfolio04.scss
@@ -22,7 +22,8 @@
 }
 
 .portfolio-item:hover .portfolio-description {
-	transform: rotateY(360deg);
+	-webkit-transform: rotateY(360deg);
+	        transform: rotateY(360deg);
 }
 
 .portfolio-description {
@@ -36,7 +37,10 @@
 	left: 35px;
 	box-shadow: 0px 0px 10px #000;
 	-webkit-transform: rotateY(30deg) translateZ(60px);
+	-webkit-transition: -webkit-transform 0.5s ease;
+	transition: -webkit-transform 0.5s ease;
 	transition: transform 0.5s ease;
+	transition: transform 0.5s ease, -webkit-transform 0.5s ease;
 }
 
 .portfolio h4 {
