Implements flexbox in top menu.

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,43 @@
+.menu-wrapper a:not([href]) {
+  cursor: not-allowed; }
+
+.menu-wrapper {
+  position: fixed;
+  z-index: 4;
+  width: 100%; }
+
+.menu-wrapper ul {
+  margin: 0;
+  box-shadow: 0 3px 5px 2px rgba(0, 0, 0, 0.3);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+.menu-wrapper li {
+  list-style: none;
+  padding: 14px;
+  -webkit-box-flex: 1.0;
+  -ms-flex: 1.0 auto;
+  flex: 1.0 auto;
+  text-align: center; }
+
+.menu-wrapper ul li a {
+  text-decoration: none; }
+
+.list-divider {
+  padding: 8px 4px;
+  font-size: 1.2em;
+  background-color: rgba(211, 211, 211, 0.31); }
+
+@media screen and (max-width: 1187px) {
+  /* APPLICABLE ON SMALL & MEDIUM */
+  #navbar-large {
+    display: none; }
+
+  #menuSidenav a {
+    margin: 0 auto; } }
 h2#christmas {
   color: #ff41b9;
   position: relative;
@@ -83,6 +123,83 @@ h2#christmas {
   0%, 100% {
     background: #ff41b9;
     box-shadow: 0px 2px 20px 4px rgba(255, 65, 185, 0.3); } }
+/************************ SLIDE SHOW *********************************/
+.slides {
+  margin-top: -10px; }
+
+.slides figure {
+  margin: 0 20px;
+  position: relative;
+  overflow: hidden; }
+
+.slides figure img {
+  margin: 0;
+  opacity: .7;
+  -webkit-transition: all 1.5s;
+  transition: all 1.5s; }
+
+.slides:hover img {
+  opacity: 1;
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05); }
+
+.slides a {
+  position: absolute;
+  top: 50%;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  z-index: 0;
+  font-size: 1.5em;
+  font-weight: bold;
+  height: 1.5em;
+  width: 1.5em;
+  border-radius: 50%;
+  padding-left: 5px;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  padding-left: .3em;
+  cursor: pointer;
+  opacity: 0;
+  visibility: hidden; }
+
+.slides a#left {
+  left: 20px;
+  -webkit-transform: translateX(-34px);
+  transform: translateX(-34px); }
+
+.slides a#right {
+  right: 20px;
+  -webkit-transform: translateX(34px);
+  transform: translateX(34px); }
+
+.slides:hover a#left, .slides:hover a#right {
+  -webkit-transform: none;
+  transform: none;
+  opacity: .8;
+  visibility: visible; }
+
+figcaption {
+  position: absolute;
+  bottom: 4px;
+  right: 0;
+  color: white;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  font-size: 1.3em;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: rotate(360deg) translateY(-345px);
+  transform: rotate(360deg) translateY(-345px);
+  -webkit-transition: all 1.3s ease-out;
+  transition: all 1.3s ease-out; }
+
+.slides:hover figcaption {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transform: none;
+  transform: none; }
+
+/************************ SLIDE SHOW *********************************/
 /* TIMELINE STYLES */
 .timeline ul li {
   list-style-type: none;
@@ -587,11 +704,11 @@ body {
   background-image: url(../img/background.jpg);
   background-attachment: fixed; }
 
+* {
+  box-sizing: border-box; }
+
 h2#name, h3 {
   font-family: serif; }
-
-.w3-navbar a:not([href]) {
-  cursor: not-allowed; }
 
 .modal {
   position: fixed;
@@ -608,9 +725,6 @@ h2#name, h3 {
   left: 50%;
   display: inline-block;
   padding: 20px; }
-
-.setAnchorPadding a {
-  padding: 4px 2px 4px 6px; }
 
 a.help {
   text-decoration: none; }
@@ -693,7 +807,7 @@ th {
   text-align: center; }
 
 article#main {
-  margin: 0 auto 20px auto;
+  margin: 91px auto 20px auto;
   background-color: #fff; }
 
 #introduction dt {
@@ -773,83 +887,6 @@ ul.socialicons li a i:hover {
   font-weight: bold; }
 
 /**************************** SOCIAL SHARE ************************************/
-/************************ SLIDE SHOW *********************************/
-.slides {
-  margin-top: -10px; }
-
-.slides figure {
-  margin: 0 20px;
-  position: relative;
-  overflow: hidden; }
-
-.slides figure img {
-  margin: 0;
-  opacity: .7;
-  -webkit-transition: all 1.5s;
-  transition: all 1.5s; }
-
-.slides:hover img {
-  opacity: 1;
-  -webkit-transform: scale(1.05);
-  transform: scale(1.05); }
-
-.slides a {
-  position: absolute;
-  top: 50%;
-  background-color: rgba(0, 0, 0, 0.8);
-  color: white;
-  z-index: 0;
-  font-size: 1.5em;
-  font-weight: bold;
-  height: 1.5em;
-  width: 1.5em;
-  border-radius: 50%;
-  padding-left: 5px;
-  -webkit-transition: all .5s;
-  transition: all .5s;
-  padding-left: .3em;
-  cursor: pointer;
-  opacity: 0;
-  visibility: hidden; }
-
-.slides a#left {
-  left: 20px;
-  -webkit-transform: translateX(-34px);
-  transform: translateX(-34px); }
-
-.slides a#right {
-  right: 20px;
-  -webkit-transform: translateX(34px);
-  transform: translateX(34px); }
-
-.slides:hover a#left, .slides:hover a#right {
-  -webkit-transform: none;
-  transform: none;
-  opacity: .8;
-  visibility: visible; }
-
-figcaption {
-  position: absolute;
-  bottom: 4px;
-  right: 0;
-  color: white;
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  font-size: 1.3em;
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transform: rotate(360deg) translateY(-345px);
-  transform: rotate(360deg) translateY(-345px);
-  -webkit-transition: all 1.3s ease-out;
-  transition: all 1.3s ease-out; }
-
-.slides:hover figcaption {
-  opacity: 1;
-  visibility: visible;
-  -webkit-transform: none;
-  transform: none; }
-
-/************************ SLIDE SHOW *********************************/
 footer {
   text-align: center;
   color: #fff; }
@@ -862,49 +899,5 @@ footer {
   /* APPLICABLE ON MEDIUM & LARGE */
   #personal-info {
     left: 9px; } }
-@media screen and (min-width: 1188px) {
-  /* MENU STYLE ON LARGE DEVICES */
-  .timeline ul {
-    padding: 0; }
-
-  #burger {
-    display: none; }
-
-  #navbar-large {
-    display: block; }
-
-  #skillsTable {
-    width: 800px;
-    margin: 0 auto; }
-
-  .list-divider {
-    padding: 8px 4px;
-    font-size: 1.2em;
-    background-color: rgba(211, 211, 211, 0.31); } }
-@media screen and (max-width: 1187px) {
-  /* APPLICABLE ON SMALL & MEDIUM */
-  #navbar-large {
-    display: none; }
-
-  #burger li {
-    list-style-type: none;
-    margin: 5px; }
-
-  #burger a {
-    text-decoration: none; }
-
-  #burger {
-    margin: 0;
-    padding: 0;
-    position: fixed;
-    top: 7px;
-    left: 7px;
-    z-index: 2; }
-
-  #burger, #burger > li, #burger > li > a {
-    display: inline-block; }
-
-  #menuSidenav a {
-    margin: 0 auto; } }
 
 /*# sourceMappingURL=main.css.map */
