--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,6 @@
+@import 'menu';
 @import 'christmas-lights';
+@import 'slideshow';
 @import 'timeline';
 @import 'pig-animation';
 @import 'portfolio04';
