--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,33 +1,32 @@
-
+<!-- 
   <ul class="w3-green" id="burger">
     <li><a href="#" ng-click="sideMenuToggle()"><i class="fa fa-bars" aria-hidden="true"></i></a>
     </li>
-  </ul>
+  </ul> -->
 
-<div class="w3-top"> <!-- Forces navbar to stay sticked at the top -->
-  <ul class="w3-navbar w3-green w3-card-8" id="navbar-large">
-    <li><a class="w3-padding-16" href="#">
-      PORTFOLIO <span class="w3-tag w3-red">Alpha</span></a>
+<div class="menu-wrapper"> <!-- Forces navbar to stay sticked at the top -->
+  <ul class="w3-green">
+    <li><a> PORTFOLIO <span class="w3-tag w3-red">Alpha</span></a>
     </li>
-    <li><a class="w3-padding-16" ng-click="gotoAnchor(skills)">SKILLS</a></li>
-    <li><a class="w3-padding-16">LIFE EVENTS</a></li>
-    <li><a class="w3-padding-16">ACHIEVEMENTS</a></li>
-    <li><a class="w3-padding-16">CALENDAR</a></li>
+    <li><a ng-click="gotoAnchor(skills)">SKILLS</a></li>
+    <li><a>TIMELINE</a></li>
+    <li><a>ACHIEVEMENTS</a></li>
+    <li><a>CALENDAR</a></li>
     <li class="w3-dropdown-hover">
-      <a class="w3-padding-16" href="#">WORK SAMPLES <i class="fa fa-caret-down"></i></a>
+      <a href="#">WORK SAMPLES <i class="fa fa-caret-down"></i></a>
       <div class="w3-dropdown-content w3-border w3-border-green">
         <div class="list-divider">PROJECTS</div>
-            <a class="w3-padding-16">PORTFOLIO</a>
-            <a class="w3-padding-16" href="https://github.com/techraiders/vaidya/">VAIDYA</a>
-            <a class="w3-padding-16" href="https://github.com/techraiders/bestdeal">E-COMMERCE</a>
-            <a class="w3-padding-16" href="http://techraiders.github.io/ngClassifieds/">E-CLASSIFIEDS</a>
+            <a> PORTFOLIO</a>
+            <a href="https://github.com/techraiders/vaidya/">VAIDYA</a>
+            <a href="https://github.com/techraiders/bestdeal">E-COMMERCE</a>
+            <a href="http://techraiders.github.io/ngClassifieds/">E-CLASSIFIEDS</a>
         <div class="list-divider">IMAGES EDITING</div>
-            <a class="w3-padding-16" href="https://goo.gl/photos/3trtkzuWVutgSi3w7">GALLARY</a>
+            <a href="https://goo.gl/photos/3trtkzuWVutgSi3w7">GALLARY</a>
       </div>
     </li>
-    <li><a class="w3-padding-16">REFERENCES</a></li>
-    <li><a class="w3-padding-16">CONTACTS</a></li>
-    <li class="w3-right w3-navitem"><i class="fa fa-search w3-margin-right"></i></li>
+    <li><a>REFERENCES</a></li>
+    <li><a>CONTACTS</a></li>
+    <li class="w3-right"><i class="fa fa-search w3-margin-right"></i></li>
   </ul>
 
   <nav class="w3-sidenav w3-collapse w3-white w3-card-2 w3-animate-left" id="menuSidenav" ng-init="w3_close()">
