--- a/components/navbar.html
+++ b/components/navbar.html
@@ -17,12 +17,12 @@
       <a class="w3-padding-16" href="#">WORK SAMPLES <i class="fa fa-caret-down"></i></a>
       <div class="w3-dropdown-content w3-border w3-border-green">
         <div class="list-divider">PROJECTS</div>
-            <a class="w3-padding-16">PORTFOLIO</a>
-            <a class="w3-padding-16" href="https://github.com/techraiders/vaidya/">VAIDYA</a>
-            <a class="w3-padding-16" href="https://github.com/techraiders/bestdeal">E-COMMERCE</a>
-            <a class="w3-padding-16" href="http://techraiders.github.io/ngClassifieds/">E-CLASSIFIEDS</a>
+            <a class="w3-padding-16">Portfolio</a>
+            <a class="w3-padding-16" href="https://github.com/techraiders/hqms">Hospital Quality M.S.</a>
+            <a class="w3-padding-16" href="https://techraiders.github.io/ng-gallery/">Angular Gallery</a>
+            <a class="w3-padding-16" href="http://techraiders.github.io/ngClassifieds/">E-classifieds</a>
         <div class="list-divider">IMAGES EDITING</div>
-            <a class="w3-padding-16" href="https://goo.gl/photos/3trtkzuWVutgSi3w7">GALLARY</a>
+            <a class="w3-padding-16" href="https://goo.gl/photos/3trtkzuWVutgSi3w7">Samples</a>
       </div>
     </li>
     <li><a class="w3-padding-16">REFERENCES</a></li>
