--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -8,8 +8,8 @@
         <div id="personal-info">
           <h2 id="name"> I'M <span>NAVNEET PRAKASH</span></h2>
           <h6>
-            <a class="help" href="https://en.wikipedia.org/wiki/Front-end_web_development">Frontend Developer</a> at
-            <a class="company" href="http://www.nxtlifetechnologies.com/">NxtLife Technologies Ltd. UK</a><hr/>
+            <a class="help" href="https://en.wikipedia.org/wiki/Front-end_web_development">AngularJs Developer</a> at
+            <a class="company" href="http://www.cityexploro.com/">CityExploro</a><hr/>
           </h6>
             <address>
               <strong>Age:</strong> 24 <br/>
