--- a/components/timeline.html
+++ b/components/timeline.html
@@ -18,7 +18,17 @@
 					</h2>
 				</header>
 				<ul>
+					<li data-year="2017"></li>
+					<li>
+						<article class="w3-card-4">
+							<h6><i class="fa fa-briefcase" aria-hidden="true"></i> ANGULARJS DEVELOPER </h6>
+							<h6 class="content"><a href="http://www.cityexploro.com" target="_blank"><i class="fa fa-building-o" aria-hidden="true"></i> CityExploro</a></h6>
+							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> Jan 2017 - Present </h6>
+							<p>Responsible for creating reusable modular Front End in the form of AngularJs Services, Factory, Filters, and Directives that interacts with RESTFUL APIs using Angularjs $http methods to retrieve and send data to the backend, using AngularJs, JavaScript, HTML5, CSS3, Twitter Bootstrap, JSON, Git and Bitbucket.</p>
+						</article>
+					</li>
 					<li data-year="2016"></li>
+					<li></li>
 					<li>
 						<article class="w3-card-4">
 							<h6><i class="fa fa-briefcase" aria-hidden="true"></i> FRONT END DEVELOPER </h6>
@@ -31,16 +41,8 @@
 						<article class="w3-card-4">
 							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> ONLINE TRAINING </h6>
 							<h6 class="content"><i class="fa fa-globe" aria-hidden="true"></i> <a href="http://www.udemy.com/">Udemy.com and Lynda.com</a></h6>
-							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> July 2016 - Aug 2016</h6>
-							<p>Learned AngularJs, Bootstrap3 grid system, W3.css, Google chart, Brushed up existing skills.</p>
-						</article>
-					</li>
-					<li>
-						<article class="w3-card-4">
-							<h6><i class="fa fa-graduation-cap" aria-hidden="true"></i> ONLINE TRAINING </h6>
-							<h6 class="content"><i class="fa fa-globe" aria-hidden="true"></i> <a href="http://www.udemy.com/">Udemy.com and Lynda.com</a></h6>
-							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> May 2016 - June 2016</h6>
-							<p>Learned Angular 2, Git and Github, Aptitude, Reasoning, other research.</p>
+							<h6 class="content"><i class="fa fa-calendar" aria-hidden="true"></i> April 2016 - Aug 2016</h6>
+							<p>Learned AngularJs, Bootstrap3 grid system, W3.css, did course of Angular 2, Git and Github, other research, sharpened existing skills, relocated to Delhi.</p>
 						</article>
 					</li>
 					<li>
