Updates, resume and greeting.

--- a/components/sidenav.html
+++ b/components/sidenav.html
@@ -1,64 +1,31 @@
 <!-- Share button at the right that opens sidenav of sharing icons -->
-      <nav class="w3-sidenav  w3-card-2 w3-hide-small w3-hide-medium w3-animate-right setAnchorPadding" style="width:auto;height:auto;right:0;" id="shareicon" ng-show="!showsocialshareiconsholder">
-        <a href="">
-          <i class="fa fa-share-alt" aria-hidden="true" ng-mouseover="showsocialshareiconsholder=true"></i>
-        </a>
-        <a href="documents/front-end-developer.pdf" download="Front-End-Developer.pdf">
-          <i class="fa fa-download" aria-hidden="true"></i>
-        </a>
-      </nav>
-
-        <!-- side nav sharing icons holder -->
-      <nav class="w3-sidenav w3-animate-right w3-card-2 setAnchorPadding" style="width:auto; height:auto;right:0;" id="socialshareiconsholder" ng-show="showsocialshareiconsholder" ng-mouseleave="showsocialshareiconsholder=false">
-        <!-- <a href="#" class="w3-closenav">Close &times;</a> -->
-
-
-        <a href="#"
-          socialshare
-          socialshare-provider="linkedin"
-          socialshare-text="Hire the most Creative Software Engineer"
-          socialshare-hashtags="Navneet, techraiders"
-          socialshare-url="http://techraiders.github.io/portfolio">
-          <i class="fa fa-linkedin w3-xlarge" aria-hidden="true"></i>
-        </a>
-        <a href="#"
-          socialshare
-          socialshare-provider="facebook"
-          socialshare-text="Hire the most Creative Software Engineer"
-          socialshare-hashtags="Navneet, techraiders"
-          socialshare-url="http://techraiders.github.io/portfolio">
-          <i class="fa fa-facebook w3-xlarge" w3-xlarge aria-hidden="true"></i>
-        </a>
-        <a href="#"
-          socialshare
-          socialshare-provider="twitter"
-          socialshare-text="Hire the most Creative Software Engineer"
-          socialshare-hashtags="Navneet, techraiders"
-          socialshare-url="http://techraiders.github.io/portfolio">
-          <i class="fa fa-twitter w3-xlarge" aria-hidden="true" target="_blank"></i>
-        </a>
-        <a href="#"
-          socialshare
-          socialshare-provider="google"
-          socialshare-text="Hire the most Creative Software Engineer"
-          socialshare-hashtags="Navneet, techraiders"
-          socialshare-url="http://techraiders.github.io/portfolio">
-          <i class="fa fa-google-plus w3-xlarge" aria-hidden="true"></i>
-        </a>
-        <a href="#"
-          socialshare
-          socialshare-provider="skype"
-          socialshare-text="Hire the most Creative Software Engineer"
-          socialshare-hashtags="Navneet, techraiders"
-          socialshare-url="http://techraiders.github.io/portfolio">
-          <i class="fa fa-skype" aria-hidden="true"></i>
-        </a>
-        <a href="#"
-          socialshare
-          socialshare-provider="pinterest"
-          socialshare-text="Hire the most Creative Software Engineer"
-          socialshare-hashtags="Navneet, techraiders"
-          socialshare-url="http://techraiders.github.io/portfolio">
-          <i class="fa fa-pinterest-p" aria-hidden="true"></i>
-        </a>
-      </nav>
+<nav class="w3-sidenav  w3-card-2 w3-hide-small w3-hide-medium w3-animate-right setAnchorPadding" style="width:auto;height:auto;right:0;" id="shareicon" ng-show="!showsocialshareiconsholder">
+  <a href="">
+    <i class="fa fa-share-alt" aria-hidden="true" ng-mouseover="showsocialshareiconsholder=true"></i>
+  </a>
+  <a href="documents/angularjs-developer.pdf" download="AngularJs-Developer.pdf">
+    <i class="fa fa-download" aria-hidden="true"></i>
+  </a>
+</nav>
+<!-- side nav sharing icons holder -->
+<nav class="w3-sidenav w3-animate-right w3-card-2 setAnchorPadding" style="width:auto; height:auto;right:0;" id="socialshareiconsholder" ng-show="showsocialshareiconsholder" ng-mouseleave="showsocialshareiconsholder=false">
+  <!-- <a href="#" class="w3-closenav">Close &times;</a> -->
+  <a href="#" socialshare socialshare-provider="linkedin" socialshare-text="Hire the most Creative Software Engineer" socialshare-hashtags="Navneet, techraiders" socialshare-url="http://techraiders.github.io/portfolio">
+    <i class="fa fa-linkedin w3-xlarge" aria-hidden="true"></i>
+  </a>
+  <a href="#" socialshare socialshare-provider="facebook" socialshare-text="Hire the most Creative Software Engineer" socialshare-hashtags="Navneet, techraiders" socialshare-url="http://techraiders.github.io/portfolio">
+    <i class="fa fa-facebook w3-xlarge" w3-xlarge aria-hidden="true"></i>
+  </a>
+  <a href="#" socialshare socialshare-provider="twitter" socialshare-text="Hire the most Creative Software Engineer" socialshare-hashtags="Navneet, techraiders" socialshare-url="http://techraiders.github.io/portfolio">
+    <i class="fa fa-twitter w3-xlarge" aria-hidden="true" target="_blank"></i>
+  </a>
+  <a href="#" socialshare socialshare-provider="google" socialshare-text="Hire the most Creative Software Engineer" socialshare-hashtags="Navneet, techraiders" socialshare-url="http://techraiders.github.io/portfolio">
+    <i class="fa fa-google-plus w3-xlarge" aria-hidden="true"></i>
+  </a>
+  <a href="#" socialshare socialshare-provider="skype" socialshare-text="Hire the most Creative Software Engineer" socialshare-hashtags="Navneet, techraiders" socialshare-url="http://techraiders.github.io/portfolio">
+    <i class="fa fa-skype" aria-hidden="true"></i>
+  </a>
+  <a href="#" socialshare socialshare-provider="pinterest" socialshare-text="Hire the most Creative Software Engineer" socialshare-hashtags="Navneet, techraiders" socialshare-url="http://techraiders.github.io/portfolio">
+    <i class="fa fa-pinterest-p" aria-hidden="true"></i>
+  </a>
+</nav>
