Adds new project dashboard in work sample/projects.

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,10 +1,9 @@
-
-  <ul class="w3-green" id="burger">
-    <li><a href="#" ng-click="sideMenuToggle()"><i class="fa fa-bars" aria-hidden="true"></i></a>
-    </li>
-  </ul>
-
-<div class="w3-top"> <!-- Forces navbar to stay sticked at the top -->
+<ul class="w3-green" id="burger">
+  <li><a href="#" ng-click="sideMenuToggle()"><i class="fa fa-bars" aria-hidden="true"></i></a>
+  </li>
+</ul>
+<div class="w3-top">
+  <!-- Forces navbar to stay sticked at the top -->
   <ul class="w3-navbar w3-green w3-card-8" id="navbar-large">
     <li><a class="w3-padding-16" href="#">
       PORTFOLIO <span class="w3-tag w3-red">Alpha</span></a>
@@ -17,19 +16,19 @@
       <a class="w3-padding-16" href="#">WORK SAMPLES <i class="fa fa-caret-down"></i></a>
       <div class="w3-dropdown-content w3-border w3-border-green">
         <div class="list-divider">PROJECTS</div>
-            <a class="w3-padding-16">Portfolio</a>
-            <a class="w3-padding-16" href="https://github.com/techraiders/hqms">Hospital Quality M.S.</a>
-            <a class="w3-padding-16" href="https://techraiders.github.io/ng-gallery/">Angular Gallery</a>
-            <a class="w3-padding-16" href="http://techraiders.github.io/ngClassifieds/">E-classifieds</a>
+        <a class="w3-padding-16">Dashboard</a>
+        <a class="w3-padding-16">Portfolio</a>
+        <a class="w3-padding-16" href="https://github.com/techraiders/hqms">Hospital Quality M.S.</a>
+        <a class="w3-padding-16" href="https://techraiders.github.io/ng-gallery/">Angular Gallery</a>
+        <a class="w3-padding-16" href="http://techraiders.github.io/ngClassifieds/">E-classifieds</a>
         <div class="list-divider">IMAGES EDITING</div>
-            <a class="w3-padding-16" href="https://goo.gl/photos/3trtkzuWVutgSi3w7">Samples</a>
+        <a class="w3-padding-16" href="https://goo.gl/photos/3trtkzuWVutgSi3w7">Samples</a>
       </div>
     </li>
     <li><a class="w3-padding-16">REFERENCES</a></li>
     <li><a class="w3-padding-16">CONTACTS</a></li>
     <li class="w3-right w3-navitem"><i class="fa fa-search w3-margin-right"></i></li>
   </ul>
-
   <nav class="w3-sidenav w3-collapse w3-white w3-card-2 w3-animate-left" id="menuSidenav" ng-init="w3_close()">
     <a class="w3-padding-8" href="" ng-click="w3_close()">CLOSE</a>
     <a class="w3-padding-8" href="#">SKILLS</a>
