--- a/components/siteheader.html
+++ b/components/siteheader.html
@@ -1,39 +1,80 @@
 <section class="w3-container">
   <div class="w3-row" id="siteHeader">
     <div class="w3-col w3-card-2 m3 l2" style="height:289px;">
-      <img src="img/dp.jpg" alt="Display Picture" style="width:100%;height:100%">
+      <img
+        src="img/dp.jpg"
+        alt="Display Picture"
+        style="width:100%;height:100%"
+      />
     </div>
     <div class="w3-col m9 l10" style="position: relative;">
       <p class="speech">Hello &amp; Welcome</p>
       <div id="personal-info">
-        <h2 id="name"> I'M <span>NAVNEET PRAKASH</span></h2>
+        <h2 id="name">I'M <span>NAVNEET PRAKASH</span></h2>
         <h6>
-            <a class="help" href="https://en.wikipedia.org/wiki/Front-end_web_development">AngularJs Developer</a> at
-            <a class="company" href="http://www.cityexploro.com/">CityExploro</a><hr/>
-          </h6>
+          <a
+            class="help"
+            href="https://en.wikipedia.org/wiki/Front-end_web_development"
+            >AngularJs Developer</a
+          >
+          at
+          <a class="company" href="http://www.cityexploro.com/">CityExploro</a>
+          <hr />
+        </h6>
         <address>
-          <strong>Age:</strong> 25
-          <br/>
+          <strong>Age:</strong> 25 <br />
           <strong>
-                <i class="fa fa-map-marker w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> Address: </span>
-              </strong>Laxmi Nagar, New Delhi - 110092
-          <br/>
+            <i
+              class="fa fa-map-marker w3-hide-medium w3-hide-large"
+              aria-hidden="true"
+            ></i>
+            <span class="w3-hide-small"> Address: </span> </strong
+          >Laxmi Nagar, New Delhi - 110092 <br />
           <strong>
-                <i class="fa fa-mobile w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small" > Phone:
-                </span>
-              </strong> +91-9527936489
-          <br/>
-          <strong> <i class="fa fa-envelope w3-hide-medium w3-hide-large" aria-hidden="true"></i> <span class="w3-hide-small"> 
-                Email:</span>
-              </strong> <span ng-copy="Message=true"> hello_navneet@hotmail.com</span> <span class="w3-tag w3-orange w3-margin-left" ng-show="Message"><em><strong>Email Copied</strong></em></span>
+            <i
+              class="fa fa-mobile w3-hide-medium w3-hide-large"
+              aria-hidden="true"
+            ></i>
+            <span class="w3-hide-small"> Phone: </span>
+          </strong>
+          +91-9*2*93*4*9 <br />
+          <strong>
+            <i
+              class="fa fa-envelope w3-hide-medium w3-hide-large"
+              aria-hidden="true"
+            ></i>
+            <span class="w3-hide-small"> Email:</span>
+          </strong>
+          <span ng-copy="Message=true"> h**lo_nav***t@hotmail.com</span>
+          <span class="w3-tag w3-orange w3-margin-left" ng-show="Message"
+            ><em><strong>Email Copied</strong></em></span
+          >
         </address>
         <ul class="socialicons">
           <li style="line-height: 2.5;">Let's be in touch</li>
-          <li><a href="http://facebook.com/techraiders" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-          <li><a href="https://in.linkedin.com/in/techraiders" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-          <li><a href="https://github.com/techraiders" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </li>
-          <!-- <li class="disabled"><a href="#"><i class="fa fa-twitter" aria-hidden="true" target="_blank"></i></a></li> -->
-          <li class="disabled"><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i> </a></li>
+          <li>
+            <a href="http://facebook.com/techraiders" target="_blank"
+              ><i class="fa fa-facebook" aria-hidden="true"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://in.linkedin.com/in/techraiders" target="_blank"
+              ><i class="fa fa-linkedin" aria-hidden="true"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://github.com/techraiders" target="_blank"
+              ><i class="fa fa-github" aria-hidden="true"></i
+            ></a>
+          </li>
+          <!--
+            <li class="disabled"><a href="#"><i class="fa fa-twitter" aria-hidden="true" target="_blank"></i></a></li>
+          -->
+          <li class="disabled">
+            <a href="#"
+              ><i class="fa fa-google-plus" aria-hidden="true"></i>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
